--- a/src/AsciiArtCreator.Wpf.Framework/packages.config
+++ b/src/AsciiArtCreator.Wpf.Framework/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="ControlzEx" version="6.0.0" targetFramework="net48" />
+  <package id="Extended.Wpf.Toolkit" version="4.6.0" targetFramework="net48" />
   <package id="Fluent.Ribbon" version="10.0.4" targetFramework="net48" />
   <package id="Microsoft.Xaml.Behaviors.Wpf" version="1.1.39" targetFramework="net48" />
 </packages>
