--- a/src/AsciiArtCreator.SystemDrawing.Framework/AsciiArtCreator.SystemDrawing.Framework.csproj
+++ b/src/AsciiArtCreator.SystemDrawing.Framework/AsciiArtCreator.SystemDrawing.Framework.csproj
@@ -31,6 +31,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="FastBitmapLib, Version=1.3.1.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\AsciiArtCreator.Wpf\packages\FastBitmapLib.2.1.0\lib\net452\FastBitmapLib.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Drawing" />
@@ -42,8 +45,15 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Helpers\BitmapExpansMethods.cs" />
+    <Compile Include="StandartAsciiArtMethods.cs" />
+    <Compile Include="GrayscaleArtFormatCollection.cs" />
+    <Compile Include="GrayscaleArtFormat.cs" />
     <Compile Include="GrayscaleAsciiArt.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
