--- a/src/AsciiArtCreator.SystemDrawing.Framework/AsciiArtCreator.SystemDrawing.Framework.csproj
+++ b/src/AsciiArtCreator.SystemDrawing.Framework/AsciiArtCreator.SystemDrawing.Framework.csproj
@@ -45,6 +45,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AsciiArtExporter.cs" />
     <Compile Include="Helpers\BitmapExpansMethods.cs" />
     <Compile Include="StandartAsciiArtMethods.cs" />
     <Compile Include="GrayscaleArtFormatCollection.cs" />
